# financial-news

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/: README.md
.agents/skills/: README.md
.agents/skills/capital-iq-browser/: SKILL.md  navigation-notes.md
.agents/skills/editorial-graphs/: SKILL.md  examples.md
.agents/skills/financial_data/: SKILL.md
.agents/skills/google_search/: SKILL.md
.agents/skills/news_search/: SKILL.md
agents/: analyzer.py  chart_review.py  charts.py  compiler.py  config.py  fetcher.py  google_search.py  market_snapshot.py  model_selection.py  models.py  paths.py  pipeline.py  prompts_loader.py  researcher.py  runner.py  storage.py  transcriber.py  utils.py  youtube_channels.py
agents/prompts/: analyze_transcript.md  compile_briefing.md  research_claim.md  research_sp_data.md  review_briefing.md  review_chart.md  translate_briefing_german.md
agents/skills/browser/: SKILL.md
agents/skills/financial_data/: SKILL.md
agents/skills/news_search/: SKILL.md
cli/: main.py
config/: settings.json
data/: pipeline_status.json
scripts/: run-daily-pipeline.sh
tests/: test_analyzer.py  test_charts.py  test_compiler.py  test_config.py  test_fetcher.py  test_google_search.py  test_market_snapshot.py  test_model_selection.py  test_paths.py  test_runner.py  test_transcriber.py  test_utils.py
web/backend/: main.py
web/backend/routers/: briefings.py  research.py  settings.py  (+1 more)
web/frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
(+14 files in other folders)
